# YT-Shorts-Dual-Panel-Agent

./: .deployignore  .dockerignore  .env.example  .env.server  .gitignore  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  PHASE_3_COMPLETED.md  PROJECT_SUMMARY.md  README.md  ROADMAP_NEXT_PHASES.md  VIDEOS_GUIDE.md  WORKFLOW.md  activate-server.sh  cli_control.py  deploy-auto-publisher.sh  deploy-fixed.sh  deploy-local.sh  deploy-native.sh  deploy-simple-final.sh  deploy-simple.sh  deploy-ultra-simple.sh  deploy.sh  docker-compose.yml  docker-entrypoint.sh  find_mp4s.py  import_yaml_channels.py  index.html  nginx.conf  pyproject.toml  requirements.txt  update-server.sh  web_interface.py  web_server_simple.py
assets/: LOGO_SETUP.md  README.md
assets/fonts/: README.md
configs/: branding.yaml  broll_pools.yaml  channels.yaml  layout.yaml  layout.yml  publish.yaml  segment_rules.yaml  templates.yaml
data/: README.md
src/: __init__.py  cli.py
src/pipeline/: __init__.py  ai_segmenter.py  auto_publisher.py  autopipeline.py  content_scorer.py  daemon.py  db.py  discovery.py  downloader.py  editor.py  layout.py  publisher.py  segmenter.py  stubs.py  subtitles.py  template_manager.py  transcribe.py
src/utils/: __init__.py  ffmpeg.py  text.py  video.py  youtube_parser.py
tests/: __init__.py  test_basic.py  test_composition.py  test_transcription_segmentation.py
